02333 prediction test send data

--- a/views/pred-dd-desktop.html
+++ b/views/pred-dd-desktop.html
@@ -5,7 +5,7 @@
 		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="a,b" data-item="49">
 			
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text" id="match_49" name="match_49"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
@@ -14,7 +14,7 @@
 		</div>
 		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="b,a" data-item="50">
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text" id="match_50" name="match_50"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
@@ -26,7 +26,7 @@
 		<div class="bracket-line"><span></span></div>
 		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="e,f" data-item="53">
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text" id="match_53" name="match_53"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
@@ -35,7 +35,7 @@
 		</div>
 		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="g,h" data-item="54">
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text" id="match_54" name="match_54"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
@@ -50,7 +50,7 @@
 		<div class="bracket-line"><span></span></div>
 		<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="a,b,c,d" data-item="57">
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text"  id="match_57" name="match_57"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
@@ -59,7 +59,7 @@
 		</div>
 		<div class="dd-wrap" data-self="w-semi-2" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-2" data-groups="e,f,g,h" data-item="58">
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text"  id="match_58" name="match_58"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
@@ -75,7 +75,7 @@
 			<div class="bracket-line"><span></span></div>
 			<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="a,b,c,d,e,f,g,h" data-item="61">
 				<div class="dd-selected placeholder">
-					<input type="text" />
+					<input type="text" id="match_61" name="match_61"/>
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 				</div>
 				<div class="dd-option-wrap">
@@ -84,7 +84,7 @@
 			</div>
 			<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2" data-groups="b,a,d,c,f,e,h,g" data-item="62">
 				<div class="dd-selected placeholder">
-					<input type="text" />
+					<input type="text" id="match_62" name="match_62"/>
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 				</div>
 				<div class="dd-option-wrap">
@@ -98,7 +98,7 @@
 			<h3 class="bracket-title" data-txt="txt24"></h3>
 			<div class="dd-wrap" data-self="champion" data-prvtarget="w-finals-1, e-finals-1" data-groups="a,b,c,d,e,f,g,h" data-item="64">
 				<div class="dd-selected placeholder">
-					<input type="text" />
+					<input type="text" id="match_64" name="match_64"/>
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 				</div>
 				<div class="dd-option-wrap">
@@ -115,7 +115,7 @@
 		<div class="bracket-line"><span></span></div>
 		<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-groups="b,a,d,c" data-item="59">
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text" id="match_59" name="match_59"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
@@ -124,7 +124,7 @@
 		</div>
 		<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="f,e,g,h" data-item="60">
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text" id="match_60" name="match_60"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
@@ -139,7 +139,7 @@
 		<div class="bracket-line"><span></span></div>
 		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="b,a" data-item="51">
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text" id="match_51" name="match_51"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
@@ -148,7 +148,7 @@
 		</div>
 		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="d,c" data-item="52">
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text" id="match_52" name="match_52"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
@@ -160,7 +160,7 @@
 		<div class="bracket-line"><span></span></div>
 		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="f,e" data-item="55">
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text" id="match_55" name="match_55"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
@@ -169,7 +169,7 @@
 		</div>
 		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="h,g" data-item="56">
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text" id="match_56" name="match_56"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
