02356 prediction modified hex color of buttons and data send.
:wq
exit

exit

--- a/css/wc22/wc22-jemson.css
+++ b/css/wc22/wc22-jemson.css
@@ -521,12 +521,9 @@
 .cta-area .btn {
 	width: 288px;
 }
-.cta-area .btn.inactive {
-	background: #917d19;
-	pointer-events: none;
-}
 .cta-area .btn.btn--red.inactive{
-	background: var(--torch-red);
+	background-color: var(--torch-red-disabled);
+	color: var(--torch-2b);
 	pointer-events: none;
 }
 @media (min-width: 768px) {
