--- a/views/pred-dd-desktop.html
+++ b/views/pred-dd-desktop.html
@@ -5,7 +5,7 @@
 		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="a,b" data-item="49">
 			
 			<div class="dd-selected placeholder">
-				<input type="text" />
+				<input type="text" class="form--form text-area input"/>
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
