002315 prediction add attr to dd-wrap

--- a/css/wc22/wc22-jemson.css
+++ b/css/wc22/wc22-jemson.css
@@ -129,9 +129,9 @@
 	text-transform: capitalize;
 	box-sizing: border-box;
 }
-.dd-wrap.active .dd-selected input[type="text"] {
+/* .dd-wrap.active .dd-selected input[type="text"] {
 	opacity: 1;
-}
+} */
 .dd-wrap .dd-option-wrap {
 	display: none;
 	position: absolute;
