Remove class for prediction html tab

--- a/views/pred-dd-desktop.html
+++ b/views/pred-dd-desktop.html
@@ -5,11 +5,7 @@
 		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="a,b" data-item="49">
 			
 			<div class="dd-selected placeholder">
-<<<<<<< HEAD
-				<input type="text" class="form--form text-area input"/>
-=======
-				<input type="text" id="match_49" name="match_49"/>
->>>>>>> c15cd0a7e893629582bbc986b1b4b20795fdfc07
+				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
 			</div>
 			<div class="dd-option-wrap">
