--- a/css/wc22/wc22.css
+++ b/css/wc22/wc22.css
@@ -7,6 +7,8 @@
 	--link-water: #CBD5E1;
 	--light-grayish-blue: #64748B;
 	--mourn-mountain-snow: #E9EAEB;
+	--light-silver: #D9D9D9;
+	--light-AEB: #E9EAEB;
 	--nelvy: #1A2E4D;
 	--pattens-blue: #e6e9eb;
 	--qatar-maroon: #8A1538;
@@ -14,6 +16,7 @@
 	--torch-red: #FF004C;
 	--torch-red-hover: #FF2969;
 	--torch-red-disabled: #D80348;
+	--pink-red-dark: #C9334E;
 	--torch-2b: #85002B;
 	--white: #fff;
 }
