--- a/css/wc22/wc22.css
+++ b/css/wc22/wc22.css
@@ -16,10 +16,7 @@
 	--torch-red: #FF004C;
 	--torch-red-hover: #FF2969;
 	--torch-red-disabled: #D80348;
-<<<<<<< HEAD
 	--pink-red: #F6034D;
-=======
->>>>>>> prediction
 	--pink-red-dark: #C9334E;
 	--torch-2b: #85002B;
 	--white: #fff;
@@ -64,7 +61,8 @@ body {
 /* ~overwrite layout.css */
 /* overwrite swiper */
 .swiper-odds--live .swiper-slide,
-.swiper-odds--upcoming .swiper-slide {
+.swiper-odds--upcoming .swiper-slide,
+.swiper-groups .swiper-slide {
 	-ms-flex-negative: 1;
 	    flex-shrink: 1;
 	width: -webkit-max-content;
@@ -775,6 +773,54 @@ iframe {
 	display: none;
 }
 /* ~prediction */
+/* groups */
+.swiper-groups {
+	position: relative;
+}
+.groups-card {
+	border-radius: 16px;
+	background-color: var(--other-1);
+	/* max-width: 480px; */
+	/* width: 480px; */
+	width: max-content;
+	padding: 16px;
+}
+.groups-card table {
+	text-align: center;
+}
+.groups-card table tr td:first-child {
+	text-align: left;
+	padding-left: 0;
+	padding-right: 0;
+}
+.groups-card table tbody tr td:nth-child(2) {
+	padding-right: 88px;
+	text-align: left;
+	padding-left: 4px;
+}
+.groups-card table td {
+	padding: 6px;
+	font-size: 12px;
+	line-height: 18px;
+}
+.groups-card table td > img {
+	width: 24px;
+	height: 16px;
+	vertical-align: middle;
+	margin-right: 8px;
+}
+.groups-card table thead tr th {
+	font-size: 12px;
+	line-height: 18px;
+	padding: 6px 6px 20px;
+}
+.groups-card table thead tr th:first-child {
+	font-size: 16px;
+	line-height: 24px;
+	text-align: left;
+	padding-left: 0;
+}
+/* ~groups */
 /* knockouts */
 .knockouts {
 	display: flex;
@@ -1211,6 +1257,17 @@ iframe {
 		display: block;
 	}
 	/* ~prediction */
+	/* groups */
+	.groups-card {
+		padding: 8px 8px 8px 16px;
+	}
+	.groups-card table thead tr th {
+		padding: 5px 5px 14px;
+	}
+	.groups-card table td {
+		padding: 5px;
+	}
+	/* ~groups */
 	/* tnc */
 	.tnc-box > img {
 		margin-left: -3%;
@@ -1485,6 +1542,11 @@ iframe {
 		max-height: 80vh
 	}
 	/* ~tnc */
+	/* groups */
+	.groups-card table tbody tr td:nth-child(2) {
+		padding-right: 32px;
+	}
+	/* ~groups */
 	/* match schedule */
 	.match-sched {
 		padding: 15px 0;
