--- a/views/pred-dd-desktop.html
+++ b/views/pred-dd-desktop.html
@@ -2,8 +2,11 @@
 	<h3 class="bracket-title" data-txt="txt21"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="top">
+		  <span class="dd-match-id">49</span>
+		  <span class="dd-match-date" data-dtme="dt49">22/11/2022 13:00</span>
+		</div>
 		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="a,b" data-item="49">
-			
 			<div class="dd-selected placeholder">
 				<input type="text" />
 				<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -11,6 +14,10 @@
 			<div class="dd-option-wrap">
 				<div class="scrollbar-inner list"></div>
 			</div>
+		</div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="bottom">
+		  <span class="dd-match-id">50</span>
+		  <span class="dd-match-date" data-dtme="dt50">22/11/2022 13:00</span>
 		</div>
 		<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="b,a" data-item="50">
 			<div class="dd-selected placeholder">
@@ -24,6 +31,10 @@
 	</div>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="top">
+		  <span class="dd-match-id">53</span>
+		  <span class="dd-match-date" data-dtme="dt53">22/11/2022 13:00</span>
+		</div>
 		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="e,f" data-item="53">
 			<div class="dd-selected placeholder">
 				<input type="text" id="match_53" name="match_53"/>
@@ -32,6 +43,10 @@
 			<div class="dd-option-wrap">
 				<div class="scrollbar-inner list"></div>
 			</div>
+		</div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="bottom">
+		  <span class="dd-match-id">54</span>
+		  <span class="dd-match-date" data-dtme="dt54">22/11/2022 13:00</span>
 		</div>
 		<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="g,h" data-item="54">
 			<div class="dd-selected placeholder">
@@ -48,6 +63,10 @@
 	<h3 class="bracket-title" data-txt="txt22"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="top">
+		  <span class="dd-match-id" data-dtme="dt57">57</span>
+		  <span class="dd-match-date">22/11/2022 13:00</span>
+		</div>
 		<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="a,b,c,d" data-item="57">
 			<div class="dd-selected placeholder">
 				<input type="text"  id="match_57" name="match_57"/>
@@ -56,6 +75,10 @@
 			<div class="dd-option-wrap">
 				<div class="scrollbar-inner list"></div>
 			</div>
+		</div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="bottom">
+		  <span class="dd-match-id">58</span>
+		  <span class="dd-match-date" data-dtme="dt58">22/11/2022 13:00</span>
 		</div>
 		<div class="dd-wrap" data-self="w-semi-2" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-2" data-groups="e,f,g,h" data-item="58">
 			<div class="dd-selected placeholder">
@@ -72,7 +95,10 @@
 	<div class="bracket finals">
 		<h3 class="bracket-title" data-txt="txt23"></h3>
 		<div class="match-bracket">
-			<div class="bracket-line"><span></span></div>
+			<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="top">
+			  <span class="dd-match-id">61</span>
+			  <span class="dd-match-date" data-dtme="dt61">22/11/2022 13:00</span>
+			</div>
 			<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="a,b,c,d,e,f,g,h" data-item="61">
 				<div class="dd-selected placeholder">
 					<input type="text" id="match_61" name="match_61"/>
@@ -81,6 +107,35 @@
 				<div class="dd-option-wrap">
 					<div class="scrollbar-inner list"></div>
 				</div>
+			</div>
+		</div>
+	</div>
+	<div class="bracket champion">
+		<div class="dd-champ-wrap">
+			<h3 class="bracket-title" data-txt="txt24"></h3>
+			<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="top">
+			  <span class="dd-match-id">64</span>
+			  <span class="dd-match-date" data-dtme="dt64">22/11/2022 13:00</span>
+			</div>
+			<div class="dd-wrap" data-self="champion" data-prvtarget="w-finals-1, e-finals-1" data-groups="a,b,c,d,e,f,g,h" data-item="64">
+				<div class="dd-selected placeholder">
+					<input type="text" id="match_64" name="match_64"/>
+					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
+				</div>
+				<div class="dd-option-wrap">
+					<div class="scrollbar-inner list"></div>
+				</div>
+			</div>
+		</div>
+		<img src="./images/prediction/logo-wc22.png" class="logo-wc22" />
+		<!-- <div class="bracket-line"><span></span></div> -->
+	</div>
+	<div class="bracket finals">
+		<h3 class="bracket-title" data-txt="txt23"></h3>
+		<div class="match-bracket">
+			<div class="d-flex flex-row space-between absolute match-date-lbl right" data-lbl="top">
+			  <span class="dd-match-id">62</span>
+			  <span class="dd-match-date" data-dtme="dt62">22/11/2022 13:00</span>
 			</div>
 			<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2" data-groups="b,a,d,c,f,e,h,g" data-item="62">
 				<div class="dd-selected placeholder">
@@ -93,26 +148,16 @@
 			</div>
 		</div>
 	</div>
-	<div class="bracket champion">
-		<div class="dd-champ-wrap">
-			<h3 class="bracket-title" data-txt="txt24"></h3>
-			<div class="dd-wrap" data-self="champion" data-prvtarget="w-finals-1, e-finals-1" data-groups="a,b,c,d,e,f,g,h" data-item="64">
-				<div class="dd-selected placeholder">
-					<input type="text" id="match_64" name="match_64"/>
-					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
-				</div>
-				<div class="dd-option-wrap">
-					<div class="scrollbar-inner list"></div>
-				</div>
-			</div>
-		</div>
-		<img src="./images/prediction/logo-wc22.png" class="logo-wc22" />
-	</div>
+	<div class="bracket-line"><span></span></div>
 </div>
 <div class="bracket semi-finals east">
 	<h3 class="bracket-title" data-txt="txt22"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="top">
+		  <span class="dd-match-id">59</span>
+		  <span class="dd-match-date" data-dtme="dt59">22/11/2022 13:00</span>
+		</div>
 		<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-groups="b,a,d,c" data-item="59">
 			<div class="dd-selected placeholder">
 				<input type="text" id="match_59" name="match_59"/>
@@ -121,6 +166,10 @@
 			<div class="dd-option-wrap">
 				<div class="scrollbar-inner list"></div>
 			</div>
+		</div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="bottom">
+		  <span class="dd-match-id">60</span>
+		  <span class="dd-match-date" data-dtme="dt60">22/11/2022 13:00</span>
 		</div>
 		<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="f,e,g,h" data-item="60">
 			<div class="dd-selected placeholder">
@@ -137,6 +186,10 @@
 	<h3 class="bracket-title" data-txt="txt21"></h3>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="top">
+		  <span class="dd-match-id">51</span>
+		  <span class="dd-match-date" data-dtme="dt51">22/11/2022 13:00</span>
+		</div>
 		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="b,a" data-item="51">
 			<div class="dd-selected placeholder">
 				<input type="text" id="match_51" name="match_51"/>
@@ -145,6 +198,10 @@
 			<div class="dd-option-wrap">
 				<div class="scrollbar-inner list"></div>
 			</div>
+		</div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="bottom">
+		  <span class="dd-match-id">52</span>
+		  <span class="dd-match-date" data-dtme="dt52">22/11/2022 13:00</span>
 		</div>
 		<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="d,c" data-item="52">
 			<div class="dd-selected placeholder">
@@ -158,6 +215,10 @@
 	</div>
 	<div class="match-bracket">
 		<div class="bracket-line"><span></span></div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="top">
+		  <span class="dd-match-id">55</span>
+		  <span class="dd-match-date" data-dtme="dt55">22/11/2022 13:00</span>
+		</div>
 		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="f,e" data-item="55">
 			<div class="dd-selected placeholder">
 				<input type="text" id="match_55" name="match_55"/>
@@ -166,6 +227,10 @@
 			<div class="dd-option-wrap">
 				<div class="scrollbar-inner list"></div>
 			</div>
+		</div>
+		<div class="d-flex flex-row space-between absolute match-date-lbl" data-lbl="bottom">
+		  <span class="dd-match-id">56</span>
+		  <span class="dd-match-date" data-dtme="dt56">22/11/2022 13:00</span>
 		</div>
 		<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="h,g" data-item="56">
 			<div class="dd-selected placeholder">
