--- a/views/pred-dd-mobile.html
+++ b/views/pred-dd-mobile.html
@@ -1,8 +1,12 @@
-<div>
+<div class="bracket-inner">
 	<div class="bracket quarter-finals">
 		<div class="match-bracket-wrap quarter-finals">
 			<div class="match-bracket">
 				<div class="bracket-line"><span></span></div>
+				<div class="d-flex flex-row space-between match-date-lbl relative">
+				  <span class="dd-match-id">49</span>
+				  <span class="dd-match-date" data-dtme="dt49">22/11/2022 13:00</span>
+				</div>
 				<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1" data-groups="a,b" data-item="49">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -11,6 +15,10 @@
 						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
 						<div class="scrollbar-inner list"></div>
 					</div>
+				</div>
+				<div class="d-flex flex-row space-between match-date-lbl relative">
+				  <span class="dd-match-id">50</span>
+				  <span class="dd-match-date" data-dtme="dt50">22/11/2022 13:00</span>
 				</div>
 				<div class="dd-wrap" data-self="w-quarter-1" data-colgroup="w-quarter" data-target="w-semi-1"  data-groups="b,a" data-item="50">
 					<div class="dd-selected placeholder">
@@ -28,6 +36,10 @@
 		<div class="match-bracket-wrap quarter-finals">
 			<div class="match-bracket">
 				<div class="bracket-line"><span></span></div>
+				<div class="d-flex flex-row space-between match-date-lbl relative">
+				  <span class="dd-match-id">53</span>
+				  <span class="dd-match-date" data-dtme="dt53">22/11/2022 13:00</span>
+				</div>
 				<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="e,f" data-item="53">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -36,6 +48,10 @@
 						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
 						<div class="scrollbar-inner list"></div>
 					</div>
+				</div>
+				<div class="d-flex flex-row space-between match-date-lbl relative">
+				  <span class="dd-match-id">54</span>
+				  <span class="dd-match-date" data-dtme="dt54">22/11/2022 13:00</span>
 				</div>
 				<div class="dd-wrap" data-self="w-quarter-2" data-colgroup="w-quarter" data-target="w-semi-2" data-groups="g,h" data-item="54">
 					<div class="dd-selected placeholder">
@@ -53,6 +69,10 @@
 		<div class="match-bracket-wrap quarter-finals">
 			<div class="match-bracket">
 				<div class="bracket-line"><span></span></div>
+				<div class="d-flex flex-row space-between match-date-lbl relative">
+				  <span class="dd-match-id">51</span>
+				  <span class="dd-match-date" data-dtme="dt51">22/11/2022 13:00</span>
+				</div>
 				<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="b,a" data-item="51">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -61,6 +81,10 @@
 						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
 						<div class="scrollbar-inner list"></div>
 					</div>
+				</div>
+				<div class="d-flex flex-row space-between match-date-lbl relative">
+				  <span class="dd-match-id">52</span>
+				  <span class="dd-match-date" data-dtme="dt52">22/11/2022 13:00</span>
 				</div>
 				<div class="dd-wrap" data-self="e-quarter-1" data-colgroup="e-quarter" data-target="e-semi-1" data-groups="d,c" data-item="52">
 					<div class="dd-selected placeholder">
@@ -78,6 +102,10 @@
 		<div class="match-bracket-wrap quarter-finals">
 			<div class="match-bracket">
 				<div class="bracket-line"><span></span></div>
+				<div class="d-flex flex-row space-between match-date-lbl relative">
+				  <span class="dd-match-id">55</span>
+				  <span class="dd-match-date" data-dtme="dt55">22/11/2022 13:00</span>
+				</div>
 				<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="f,e" data-item="55">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -86,6 +114,10 @@
 						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
 						<div class="scrollbar-inner list"></div>
 					</div>
+				</div>
+				<div class="d-flex flex-row space-between match-date-lbl relative">
+				  <span class="dd-match-id">56</span>
+				  <span class="dd-match-date" data-dtme="dt56">22/11/2022 13:00</span>
 				</div>
 				<div class="dd-wrap" data-self="e-quarter-2" data-colgroup="e-quarter" data-target="e-semi-2" data-groups="h,g" data-item="56">
 					<div class="dd-selected placeholder">
@@ -100,11 +132,15 @@
 		</div>
 	</div>
 </div>
-<div>
+<div class="bracket-inner">
 	<div class="match-bracket-wrap semi-finals">
 		<div class="bracket semi-finals">
 			<div class="match-bracket">
 				<div class="bracket-line"><span></span></div>
+				<div class="d-flex flex-row space-between match-date-lbl" data-lbl="top">
+				  <span class="dd-match-id">57</span>
+				  <span class="dd-match-date" data-dtme="dt57">22/11/2022 13:00</span>
+				</div>
 				<div class="dd-wrap" data-self="w-semi-1" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-1" data-groups="a,b,c,d" data-item="57">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -113,6 +149,10 @@
 						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
 						<div class="scrollbar-inner list"></div>
 					</div>
+				</div>
+				<div class="d-flex flex-row space-between match-date-lbl" data-lbl="bottom">
+				  <span class="dd-match-id">58</span>
+				  <span class="dd-match-date" data-dtme="dt58">22/11/2022 13:00</span>
 				</div>
 				<div class="dd-wrap" data-self="w-semi-2" data-colgroup="w-semi" data-target="w-finals-1" data-prvtarget="w-quarter-2" data-groups="e,f,g,h" data-item="58">
 					<div class="dd-selected placeholder">
@@ -128,6 +168,10 @@
 		<div class="bracket semi-finals">
 			<div class="match-bracket">
 				<div class="bracket-line"><span></span></div>
+				<div class="d-flex flex-row space-between match-date-lbl" data-lbl="top">
+				  <span class="dd-match-id">59</span>
+				  <span class="dd-match-date" data-dtme="dt59">22/11/2022 13:00</span>
+				</div>
 				<div class="dd-wrap" data-self="e-semi-1" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-1" data-groups="b,a,d,c" data-item="59">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -136,6 +180,10 @@
 						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
 						<div class="scrollbar-inner list"></div>
 					</div>
+				</div>
+				<div class="d-flex flex-row space-between match-date-lbl" data-lbl="bottom">
+				  <span class="dd-match-id">60</span>
+				  <span class="dd-match-date" data-dtme="dt60">22/11/2022 13:00</span>
 				</div>
 				<div class="dd-wrap" data-self="e-semi-2" data-colgroup="e-semi" data-target="e-finals-1" data-prvtarget="e-quarter-2" data-groups="f,e,g,h" data-item="60">
 					<div class="dd-selected placeholder">
@@ -150,10 +198,14 @@
 		</div>
 	</div>
 </div>
-<div>
+<div class="bracket-inner">
 	<div class="match-bracket-wrap finals">
 		<div class="bracket finals">
 			<div class="match-bracket">
+				<div class="d-flex flex-row space-between match-date-lbl" data-lbl="top">
+				  <span class="dd-match-id">61</span>
+				  <span class="dd-match-date" data-dtme="dt61">22/11/2022 13:00</span>
+				</div>
 				<div class="dd-wrap" data-self="w-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="w-semi-1, w-semi-2" data-groups="a,b,c,d,e,f,g,h" data-item="61">
 					<div class="dd-selected placeholder">
 						<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
@@ -162,6 +214,10 @@
 						<div class="heading"><strong>Select Team</strong><a role="button" class="btn-close">close</a></div>
 						<div class="scrollbar-inner list"></div>
 					</div>
+				</div>
+				<div class="d-flex flex-row space-between match-date-lbl absolute" data-lbl="bottom">
+				  <span class="dd-match-id">62</span>
+				  <span class="dd-match-date" data-dtme="dt62">22/11/2022 13:00</span>
 				</div>
 				<div class="dd-wrap" data-self="e-finals-1" data-colgroup="finals" data-target="champion" data-prvtarget="e-semi-1, e-semi-2" data-groups="b,a,d,c,f,e,h,g" data-item="62">
 					<div class="dd-selected placeholder">
@@ -176,10 +232,14 @@
 		</div>
 	</div>
 </div>
-<div>
+<div class="bracket-inner">
 	<div class="bracket champion">
 		<div class="dd-champ-wrap">
 			<h3 class="bracket-title" data-txt="txt24"></h3>
+			<div class="d-flex flex-row space-between match-date-lbl">
+			  <span class="dd-match-id">64</span>
+			  <span class="dd-match-date" data-dtme="dt64">22/11/2022 13:00</span>
+			</div>
 			<div class="dd-wrap" data-self="champion" data-prvtarget="w-finals-1, e-finals-1" data-groups="a,b,c,d,e,f,g,h" data-item="64">
 				<div class="dd-selected placeholder">
 					<span class="txt" data-placeholder-d="placeholder2" data-placeholder-m="placeholder3"></span>
